traefik-tencent/route.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: web-auth
spec:
  basicAuth:
    secret: web-secret
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: consulingress
  namespace: default
spec:
  entryPoints:
    #- web
    - websecure
  routes:
  - match: Host(`xxx.cn`)
    kind: Rule
    middlewares:
      - name: web-auth
    services:
    - name: consul
      kind: Service
      port: 8500
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefikingress
  namespace: default
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`xxx.cn`)
    kind: Rule
    middlewares:
      - name: web-auth
    services:
    - name: api@internal
      kind: TraefikService
